--- a/standalone_test/CMakeLists.txt
+++ b/standalone_test/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(
-		CMakeTemplateProject-standalone-test
+		G-standalone-test
 		LANGUAGES CXX
 )
 
@@ -17,29 +17,16 @@ add_executable(
 		${${PROJECT_NAME}_SOURCE}
 )
 
-target_include_directories(
-		${PROJECT_NAME}
-		PUBLIC
-		${PROJECT_SOURCE_DIR}/include
-)
+#target_include_directories(
+#		${PROJECT_NAME}
+#		PUBLIC
+#		${PROJECT_SOURCE_DIR}/include
+#)
 
 target_link_libraries(
 		${PROJECT_NAME}
 		PRIVATE
-		CMakeTemplateProject::CMakeTemplateProject
-)
-
-# create test.png
-set(TEST_PNG_FILE_PATH ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test.png)
-file(
-		TOUCH
-		${TEST_PNG_FILE_PATH}
-)
-
-target_compile_definitions(
-		${PROJECT_NAME}
-		PRIVATE
-		TEST_PNG_FILE_PATH="${TEST_PNG_FILE_PATH}"
+		G::G
 )
 
 add_test(
